# SnapNForce

./: .editorconfig  .gitignore  Dockerfile  README.md  TODO AND QUESTIONS.txt  _test.py  consolidate.py  consolidate.sql  consolidate_mailing_address.sql  consolidate_mailing_addresses.py  consolidate_v2.py  ez_patch.sql  hacks.sql  main.py  patch.sql  patch_cont.sql  patch_v2.sql  pyproject.toml  requirements.txt  street_suffix.ods  view_duplicates.sql
.github/workflows/: test.yaml
app/: app.py  constants.py  database.py  events.py  lib.py  logging.py  orm.py  schemas.py  sync.py
app/operations/: _common.py  deactivate.py  ensure.py  ensure_current.py  insert.py  link.py  select.py  select_or_insert.py  update.py
app/operations/events/: __init__.py
app/schemas/: __init__.py  _county.py  _return.py
lib/: __init__.py  models.py  scrape.py  types.py
lib/parse/: __init__.py  _common.py  _county_address.py  _general.py  _mortgage.py  _types.py  county_html.py  exceptions.py  models.py  types.py
lib/parse/grammar/: _line1.lark  general.lark  line1.lark  mortgage.lark
lib/scrape/: __init__.py
scratchland/: sync_scratch.py
scripts_and_junk/: parceltestingnotes.txt  patch.sql  unique_indexes.sql  view_duplicates.sql
scripts_and_junk/spreadsheet/: secondary_unit_designators.ods
test/: test_2.py  test_address_parser.py  test_general.py  test_parse_general.py  test_parse_mortgage.py
